# ImpBot

./: .gitignore  CMakeLists.txt  README  README.md  main.py
resources/: yaharo.opus
src/: main.cpp
src/DISCORD/: discord.cpp  discord.h
src/ENV/: parseENV.c  parseENV.cpp  parseENV.h
src/MUSIC/: music.cpp  music.h  music_queue.cpp  music_queue.h  spotify.cpp  spotify.h  youtube.cpp  youtube.h
src/SERVER/: server.cpp  server.h
src/YOUTUBE/: music_queue.cpp  music_queue.h  youtube.cpp  youtube.h  youtube.pyx
